CHANGELOG

2.0.21
UTILS:
* pa_securityprofile-edit | extend class with threatException - display it with actions=display
* pa_securityProfil-edit | introduce 'filter=( exception is.set) / (exception has XYZ)'
* pa_securityprofil-edit | introduce actions=exporttoexcel:FILE.html
* pa_securityprofil-edit - improve JSON response stdout with argument shadow-json

BUGFIX:

GENERAL:


2.0.20 (20211025)
UTILS:
* pa_address-edit | actions=decommission - improvement for better object decommission handling
* pa_service-edit | introduce actions=decommission
* pa_address-edit | improve actions=display for dynamic Addressgroup
* pa_address-edit | improve 'filter=((name regex /$$ipv4$$/) and (value is.included-in.name) )' - to match only full IP-Address
* pa_panos-xml-issue-detector | extend check for /config/readonly/devices/entry[@name='localhost.localdomain']/template

BUGFIX:
* pa_appid-enabler | bugfix related to methods move to class UTIL
* class ObjRulecontainer / AddressGroup - to add object with same name but different owner of DG hierarchy only once
* class AddressGroup add members to dynamic Addressgroups
* pa_address-edit - fix all actions where method find() is used to NOT search nested
* pa_service-edit - improve all actions if method find() is used

GENERAL:
* class ServiceGroup | introduce method has() - for better usage in pa_servicegroup-merger


2.0.19  (20211022)
UTILS:
* extend tests scripts for more QA
* sendGARP - introduce class RUNSSH - make use of in sendGARP
* sendGARP | extend command preparation with DNAT DST ip-address for test arp gratuitous
* pa_servicegroup-merger help | fix typo for argument dupalgorithm [thanks to Necip Cebeci ]
* pa_service-edit | introduce filter for sourceport.value and action sourceport-set / sourceport-delete

BUGFIX:
* pa_device-edit | bugfix for actions=devicegroupe-create:NAME if 'shared' is used as parentDG
* class RuleStore | bugfix to create shared pre-rulebase at correct place if not existent